--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="container-fluid">
         <div class="row">
 
-            <div class="col-4">
+            <div class=" title col-4">
                 <p class="fs-2">Cart</p>
                 <div id="cart"></div>
                 <p class="fs-2">Total: $<span id="cartTotal">0.00</span></p>
@@ -105,7 +105,14 @@
 
 
 
-    <footer></footer>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <p class="text-center m-3">Copyright Laura Alspaugh @ 2023</p>
+            </div>
+        </div>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="app.js"></script>
 </body>
